fixed z-index issue

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,10 +1,7 @@
-
-
 .wrapper{
   position:relative;
   width: 110vw;
   height:75vw;
-  z-index: -1;
   background:linear-gradient(
       rgba(255, 255, 255, 0.4),
       rgba(255, 255, 255, 0.4)
